2000-06-02  Christopher James Lahey  <clahey@helixcode.com>

	* camel-session.c: Don't ref the services in the cache.

2000-06-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/smtp/camel-smtp-transport.c: Rearanged where debug
	fprintf statements we placed so that any data the server sends 
	back is printed out before an exception is set and the function
	returns.

2000-06-02  Not Zed  <NotZed@HelixCode.com>

	* camel-mime-utils.c (header_decode_date): If we get a funny
	result, just throw it out.  Basically a fix for the one true
	broken TradeClient.

2000-06-01  Not Zed  <NotZed@HelixCode.com>

	* camel-folder-summary.c (message_info_free): Free
	references/messsage id.
	(message_info_save): Save them.
	(message_info_load): Load them.
	(message_info_new): And get them from the new message.
	(CAMEL_FOLDER_SUMMARY_VERSION): Bumped for new changes.

	* camel-folder-summary.h: Added references and messageid to
	summary.

2000-06-02  Christopher James Lahey  <clahey@helixcode.com>

	* camel-session.c: Ref and unref objects in the service cache
	properly.

	* camel-store.c: Ref the folder when returning it using
	lookup_folder.  Used the folder's full name for the key for the
	folder cache since that's used to uncache it.

2000-06-02  Dan Winship  <danw@helixcode.com>

	Fun with purify.

	* providers/pop3/camel-pop3-store.c (pop3_connect): free msg on
	success as well as failure.
	(camel_pop3_command_get_additional_data): free buf after reading
	the last line (".").

	* providers/pop3/camel-pop3-folder.c (get_message_by_uid): free
	body data after creating the memstream from it (which will copy
	the data).

	* providers/mbox/camel-mbox-folder.c (mbox_finalize): free summary
	and index paths.

	* camel-data-wrapper.c (finalize): unref the stream, if it exists.

2000-06-01  Not Zed  <NotZed@HelixCode.com>
>>>>>>> 1.212

	* camel-mime-part.c (construct_from_parser): For a message part,
	set the default content-type to message/rfc822.  Maybe needs to be